--- a/Application/pom.xml
+++ b/Application/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>persistance</artifactId>
+    <artifactId>Application</artifactId>
 
     <dependencies>
         <dependency>
@@ -17,6 +17,16 @@
             <artifactId>entities</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.gradesbook</groupId>
+            <artifactId>persistance</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
+
 
 </project>
