--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,8 @@
 	<modules>
 		<module>persistance</module>
 		<module>entities</module>
-	</modules>
+        <module>Application</module>
+    </modules>
 	<packaging>pom</packaging>
 
 	<name>grades-book-application</name>
@@ -59,6 +60,11 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 			<version>1.5.8.RELEASE</version>
 		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.h2database</groupId>-->
+			<!--<artifactId>h2</artifactId>-->
+			<!--<scope>runtime</scope>-->
+		<!--</dependency>-->
 
 	</dependencies>
 
