--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
 		<module>persistance</module>
 		<module>entities</module>
         <module>Application</module>
-    </modules>
+		<module>domain</module>
+	</modules>
 	<packaging>pom</packaging>
 
 	<name>grades-book-application</name>
@@ -66,6 +67,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>1.5.10.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
