completed registration method

--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.datasource.url= jdbc:postgresql://localhost:5432/GradeBook
 spring.datasource.username=postgres
 spring.datasource.password=admin
-#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create
