--- a/persistance/pom.xml
+++ b/persistance/pom.xml
@@ -7,6 +7,7 @@
         <groupId>com.gradesbook</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+    <packaging>jar</packaging>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>persistance</artifactId>
