--- a/entities/pom.xml
+++ b/entities/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>hibernate-validator</artifactId>
             <version>5.3.6.Final</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.9.4</version>
+        </dependency>
     </dependencies>
 
 
