--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#MAIL
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=spring.seba.sender@gmail.com
@@ -5,7 +6,17 @@ spring.mail.password=SpringSebaSender
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+#DATABASE
 spring.datasource.url= jdbc:postgresql://localhost:5432/GradeBook
 spring.datasource.username=postgres
 spring.datasource.password=admin
 #spring.jpa.hibernate.ddl-auto=create
+
+#RABBIT
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+jsa.rabbitmq.exchange=grade.book.exchange
+jsa.rabbitmq.queue=grade.book.queue
+jsa.rabbitmq.routingkey=grade.book.routingkey
