--- a/pdfsender/pom.xml
+++ b/pdfsender/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>pdf.sender</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.gradesbook</groupId>
+            <artifactId>com.domain</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
