complete method to send grades of student to his email in pdf attachment

--- a/pdfsender/src/main/resources/application.properties
+++ b/pdfsender/src/main/resources/application.properties
@@ -5,3 +5,17 @@ spring.rabbitmq.password=guest
 jsa.rabbitmq.queue=grade.book.queue
 
 server.port=8081
+
+#MAIL
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=spring.seba.sender@gmail.com
+spring.mail.password=SpringSebaSender
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#DATABASE
+spring.datasource.url= jdbc:postgresql://localhost:5432/GradeBook
+spring.datasource.username=postgres
+spring.datasource.password=admin
+#spring.jpa.hibernate.ddl-auto=create
