--- a/Application/pom.xml
+++ b/Application/pom.xml
@@ -43,6 +43,11 @@
             <version>1.5.8.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+        </dependency>
+
     </dependencies>
 
 
