--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -18,6 +18,10 @@
             <artifactId>entities</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.hateoas</groupId>
+            <artifactId>spring-hateoas</artifactId>
+        </dependency>
     </dependencies>
 
 
