--- a/Application/src/main/resources/application.properties
+++ b/Application/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.datasource.url= jdbc:postgresql://localhost:5432/GradeBook
 spring.datasource.username=postgres
 spring.datasource.password=admin
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 
 #RABBIT
 spring.rabbitmq.host=localhost
