--- a/Application/data/mydb.properties
+++ b/Application/data/mydb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.5
-#Mon Feb 12 12:46:24 CET 2018
+#Thu Mar 29 13:45:26 CEST 2018
 version=2.3.5
 modified=yes
 tx_timestamp=0
